--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
 .DS_Store
 Icon
+English.lproj/
+GoToLinePanel.nib/
+Help/
+HelpSource/
+LNX_Audio
+LNX_Client
+SCAdvancedFind.nib/
+SCClassLibrary/Common/
+SCClassLibrary/DefaultLibrary/
+SCClassLibrary/JITLib/
+SCClassLibrary/Platform/
+SCClassLibrary/SC3plugins/
+SCClassLibrary/SCDoc/
+SCClassLibrary/backwards_compatibility/
+SCClassLibrary/deprecated/
+SCClassLibrary/scide_scqt/
+SCcube.icns
+archive.sctxar
+html.icns
+internet_library_index
+lnx_version
+logs/
+plugins/
+preferences/
+qt.conf
+quark.icns
+rtf.icns
+rtfd.icns
+safeMode.bash
+sc.icns
+scd.icns
+sclang
+sounds/SinedPink.aiff
+sounds/a11wlk01-44_1.aiff
+sounds/a11wlk01.wav
+synthdefs/
